Update HttpURLConnection compatibility doc (#8133) (#285)